Kube/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: devops
  labels:
    name: devops
    environment: production
